--- a/examination.css
+++ b/examination.css
@@ -136,6 +136,7 @@
 /* the examinations displays style */
 
 .exam-displays {
+    display: none;
     margin: 0px;
     overflow-y: scroll;
     scrollbar-width: thin;
@@ -194,6 +195,32 @@
 
 @media screen and (max-width: 1400px) {
     /* resize the width of the entire web page */
+    .exam-grid {
+        overflow-y: scroll;
+        scrollbar-width: thin;
+        height: 75vh;
+        padding-right: 10px;
+    }
+    .exam-grid-all {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: auto;
+        align-items: center;
+        grid-column-gap: 20px;
+        grid-row-gap: 20px;
+        margin: 30px 0px;
+        margin-top: 10px;
+    }
+    .exam-fourth {
+        grid-column: 3/4;
+        grid-row:  1/3;
+    }
+    .show {
+        display: block;
+    }
+    .remove {
+        display: none;
+    }
 
     /* resize the grid of the width */
     
