--- a/Dashboard.css
+++ b/Dashboard.css
@@ -313,6 +313,11 @@ section.filtered-lists {
     box-shadow: 0px 4px 4px -3px #a3a3a35b;
     height: 100vh;
 }
+.filtering-flow {
+    overflow-y: scroll;
+    scrollbar-width: thin;
+    height: 35vh;
+}
 .filtered-2 h1 {
     color: #2a025a;
     text-transform: capitalize;
