--- a/Dashboard.css
+++ b/Dashboard.css
@@ -322,6 +322,11 @@ section.filtered-lists {
   box-shadow: 0px 4px 4px -3px #a3a3a35b;
   height: 100vh;
 }
+.filtering-flow {
+    overflow-y: scroll;
+    scrollbar-width: thin;
+    height: 35vh;
+}
 .filtered-2 h1 {
   color: #2a025a;
   text-transform: capitalize;
@@ -780,6 +785,7 @@ section.filtered-lists {
     height: 100%;
     gap: 20px;
     text-align: left;
+    display: none;
   }
   .uni-1 {
     margin: 20px 0px;
